feat: re-add basic functionality

--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
     <body>
     <div class="container">
         <div class="center">
-            <h1><b id="city">Milano</b> <button id="city-btn">set...</button> </h1>
+            <h1><b id="city">Milano</b> <button id="city-btn">set...</button>
+            </h1>
         </div>
         <!--info oggi-->
         <div class="temp-oggi" id="temp-oggi">
             °C
         </div>
-        <div class="desc-oggi" id="desc-oggi">Sole </div>
-        <img src="" id="icon">
+        <div class="desc-oggi" id="desc-oggi">
+            <img src="" id="icon">
+            <p id="w-desc">desc</p> </div>
+
         <div class="date" id="date"> 14 Settembre 2022</div>
         <div class="min-temp" id="min-temp">10 °C</div>
         <div class="max-temp" id="max-temp">18 °C</div>
-        <div class="mattina">Mattina</div>
-        <div class="pomeriggio">Pomeriggio</div>
-        <div class="sera">Sera</div>
+
     </div>
     </body>
     
