ref: document weather and ui's functions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
     <div class="container">
+        <div id="err-msg"></div>
         <div class="center">
             <h1><b id="city">Milano</b> <button id="city-btn">set...</button>
             </h1>
